; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_argv.c_argv_str.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_argv.c_argv_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.argv = type { i64 }
%struct.gc_arena = type { i32 }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @argv_str(%struct.argv* %0, %struct.gc_arena* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.argv*, align 8
  %6 = alloca %struct.gc_arena*, align 8
  %7 = alloca i32, align 4
  store %struct.argv* %0, %struct.argv** %5, align 8
  store %struct.gc_arena* %1, %struct.gc_arena** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load %struct.argv*, %struct.argv** %5, align 8
  %9 = getelementptr inbounds %struct.argv, %struct.argv* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %20

12:                                               ; preds = %3
  %13 = load %struct.argv*, %struct.argv** %5, align 8
  %14 = getelementptr inbounds %struct.argv, %struct.argv* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = inttoptr i64 %15 to i8**
  %17 = load %struct.gc_arena*, %struct.gc_arena** %6, align 8
  %18 = load i32, i32* %7, align 4
  %19 = call i8* @print_argv(i8** %16, %struct.gc_arena* %17, i32 %18)
  store i8* %19, i8** %4, align 8
  br label %21

20:                                               ; preds = %3
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8** %4, align 8
  br label %21

21:                                               ; preds = %20, %12
  %22 = load i8*, i8** %4, align 8
  ret i8* %22
}

declare dso_local i8* @print_argv(i8**, %struct.gc_arena*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
